# stormcrow_base

./: .env  .gitignore  environment_setup_nuk.txt  index.html  package-lock.json  package.json  splash.html  vite.config.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0571a7068a5117090a69275afc233997f4759e0b4de62e0e829ef2d6d52e20e3.json  query-16b2c0b921563eba3da1b5c4b8cce9f366e7a450a1c1733c11fae6519fbd856b.json  query-2b16aed6f2aaabe23c2468edf5f106c9461a942dfd34b266eff5c53a663a0d31.json  query-32868f7aaecc9d2c28c9b5382fbd331b92f6636ad81548725c4f255b381dc126.json  query-41d394faedcde27a331c04caa9bc66252f72630da662a22aca2d570fbfeb05ee.json  query-4ce6d20f58ff959e298ee2c08a0672ffb5cad2a2482734ccb036d1938781df2b.json  query-4ff099cc1b1d9c80c1fff75ea4106765bed75b6f7f3640f40559bfb14aacb6aa.json  query-5683c478c4f479c2429b058e8a132d7fc7b831e8fb961330c751d97381b04002.json  query-620f8df35def2df1fb34ecd4be00ffe0e9b248225224bb59b3bb0c7bc34cd6b0.json  query-6f4b7e6eaaea4624bf36cd2986bde81b6261660415d754c486d1359cad6e6c6a.json  query-934ac8a4f0b8b7be72a44aee304c728ddceb7311587a07dff1366abb0821172a.json  query-974dd6f71b70f33b651ebb9532b4618a17c1b6760a6173b091234c229419cd68.json  query-9e03efd7302b2e08897234016dea8f092026dae9afcd89239396f4e4de795fbb.json  query-a9de724884618592fb3d7fe3b7aee1acded3e30cc60c16395a9a615fd1677b0e.json  query-abcaaa07bea84d40367ef7c71d75905449aec654219e796ac20e4367d9a28b79.json  query-bfa91b7c07ccb18900cbc0624d2bbc3425d02055e2334382f0de86d4d4ef4c21.json  query-c411d1caa2c0b73b032b72fb75f5a20c723ce66550e58fc967a836c2ed1fea66.json  (+6 more)
(+256 files in other folders)
