[package]
name = "stormcrow_base"
version = "0.1.0"
description = "ESED Weather App"
authors = ["NateNorris"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stormcrow_base_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio-serial = "5.4.5"
anyhow = "1.0.100"
[dependencies.utils]
git = "ssh://git@bitbucket.org/norris14597mil/stormcrow_utils.git"
package = "stormcrow_utils"
tag = "v0.1.20"
features = ["mm2t-rx"]